📝 docs: rewrite METODOLOGIA_BENCHMARK.md for 3-way comparison (v2.0)
Complete scientific methodology document covering:
- Motivation and scientific question (H0 hypothesis)
- Why three backends: Java JVM vs Quarkus Native vs Go isolates JVM cost
  from concurrency model cost — cannot be done with binary comparison
- k6 tooling rationale with overhead comparison vs JMeter/Gatling
- Little's Law applied to validate RPS observations
- Three scenario design with scientific rationale per scenario
- Redis FLUSHALL protocol: documents contamination bug found empirically
- Statistical validity: CV < 2% across all runs (publishable quality)
- Full configuration symmetry table including Quarkus
- Quarkus pool misconfiguration discovery: 3 cascading bugs documented
  (thread pool, Redis pool, HTTP client pool) with observed impact per fix
- JEP 491 finding: synchronized no longer pins VTs in Java 25;
  Java degradation is HikariCP lock contention, not pinning — confirmed
  empirically with zero pin events from -Djdk.tracePinnedThreads=full
- pool=500 control experiment confirming H0 (Java == Go without contention)
- mock-external-api RNG seed collision bug and XOR fix documented
- Full request flow diagram showing VT/goroutine/OS-thread divergence
- RAM measurement methodology and structural explanation of Quarkus RAM cost
- 6 documented limitations including ecosystem maturity caveat
- Complete reproduction protocol with estimated timing (55-70 min)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>